update for rename of open_issues/_san.mdwn to service_solahart_jakarta_selatan__082122541663/_san.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
@@ -595,7 +595,7 @@ Last reviewed up to the [[Git mirror's 3a930d3fc68785662f5f3f4af02474cb21a62056
     "20110609002620.GA16719@const.famille.thibault.fr"]].  commit
     026e608ecebcb2a6193971006a85276307d79b00.
 
-  * [[`libsanitizer`|_san]] (not reviewed)
+  * [[`libsanitizer`|service_solahart_jakarta_selatan__082122541663/_san]] (not reviewed)
 
     A lot of Linux-specific things.
 
@@ -931,7 +931,7 @@ coulomb.SCHWINGE.
         `gcc.target/i386/pr54703.c`, `gcc.target/i386/sse2-extract-1.c`,
         several from `gfortran.fortran-torture`
 
-      * [[`asan.exp`|_san]]
+      * [[`asan.exp`|service_solahart_jakarta_selatan__082122541663/_san]]
 
       * missing profiling C library (`-lc_p`)
 
