update for rename of open_issues/synchronous_ipc.mdwn to service_solahart_jakarta_selatan__082122541663/synchronous_ipc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/libpager_deadlock.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpager_deadlock.mdwn
@@ -136,7 +136,7 @@ Deadlocks in libpager/periodic sync have been found.
     <braunr> hm no, the libpager patch is ok acually
 
 
-## [[synchronous_ipc]]
+## [[service_solahart_jakarta_selatan__082122541663/synchronous_ipc]]
 
 ### IRC, freenode, #hurd, 2012-07-20
 
