update for rename of open_issues/64-bit_port.mdwn to service_solahart_jakarta_selatan__082122541663/64-bit_port.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/clock_gettime.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/clock_gettime.mdwn
@@ -160,7 +160,7 @@ In context of [[select]].
       definition files
     <braunr> i wanted something that would remain correct for the 64-bit port
 
-[[64-bit_port]], [[service_solahart_jakarta_selatan__082122541663/mig_portable_rpc_declarations]].
+[[service_solahart_jakarta_selatan__082122541663/64-bit_port]], [[service_solahart_jakarta_selatan__082122541663/mig_portable_rpc_declarations]].
 
     <youpi> ah, you mean because tv_nsec is a long, which will not be the same
       type?
