update for rename of open_issues/linux_vmsig.mdwn to service_solahart_jakarta_selatan__082122541663/linux_vmsig.mdwn

--- a/hurd/libpager.mdwn
+++ b/hurd/libpager.mdwn
@@ -50,4 +50,4 @@ Library](http://www.gnu.org/software/hurd/doc/hurd_5.html#SEC32).
 
 # Open Issues
 
-  * [[open_issues/linux_vmsig]]
+  * [[service_solahart_jakarta_selatan__082122541663/linux_vmsig]]
