--- a/service_solahart_jakarta_selatan__082122541663/select.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/select.mdwn
@@ -33,7 +33,7 @@ IRC, unknown channel, unknown date:
     <paakku> Or do I just imagine this problem?
 
 
-## [[dbus]]
+## [[service_solahart_jakarta_selatan__082122541663/dbus]]
 
 
 ## IRC
