update for rename of open_issues/glibc/t/tls-threadvar.mdwn to service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gnat.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gnat.mdwn
@@ -105,7 +105,7 @@ bigger Ada code bases, or any Ada testsuites.
 
 ## `getcontext`/`makecontext`/`setcontext`/`swapcontext` usage analysis
 
-In context of [[glibc/t/tls-threadvar]].  Looking at GCC trunk commit
+In context of [[service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar]].  Looking at GCC trunk commit
 f6568ea476aa52a6e23c6db43b3e240cde55783a (2013-04-26).
 
     gcc/ada/init.c:  sigaltstack (&stack, NULL);
