update for rename of open_issues/glibc/t/tls-threadvar.mdwn to service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -69,7 +69,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
 
   * <a id=t_tls>[[`t/tls`|service_solahart_jakarta_selatan__082122541663/glibc/t/tls]]</a>
 
-  * <a id=t_tls-threadvar>[[`t/tls-threadvar`|t/tls-threadvar]]</a>
+  * <a id=t_tls-threadvar>[[`t/tls-threadvar`|service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar]]</a>
 
   * <a id=t_verify.h>`t/verify.h`</a>
 
@@ -272,7 +272,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
             <youpi> so I'd say ignore the error for now, we'll add the
               declaration
 
-      * <a id=t_tls-threadvar>[[t/tls-threadvar]]</a>
+      * <a id=t_tls-threadvar>[[service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar]]</a>
 
       * <a id=futimesat>`futimesat`</a>
 
@@ -844,7 +844,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
         a bit clunky: as a practical requirement, a thread's stack size always
         has to be equal to `PTHREAD_STACK_DEFAULT`, 2 MiB, and also has to be
         naturally aligned.  The idea is still to [[get rid of Hurd threadvars
-        and replace them with TLS|t/tls-threadvar]].
+        and replace them with TLS|service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar]].
 
         Aside from [[gccgo]], the following packages might make use of these
         functions, searching on <http://codesearch.debian.net/> for
