update for rename of open_issues/file_system_exerciser.mdwn to service_solahart_jakarta_selatan__082122541663/file_system_exerciser.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/vfat_test_suite.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/vfat_test_suite.mdwn
@@ -17,4 +17,4 @@ one can find a VFAT Test Suite.  Run it on our [[hurd/translator/fatfs]].
 
 # See Also
 
-  * [[File_System_Exerciser]]
+  * [[service_solahart_jakarta_selatan__082122541663/File_system_exerciser]]
