update for rename of open_issues/osf_mach.mdwn to service_solahart_jakarta_selatan__082122541663/osf_mach.mdwn

--- a/microkernel/mach.mdwn
+++ b/microkernel/mach.mdwn
@@ -32,7 +32,7 @@ microkernel currently used by the [[Hurd]].
     ([API](http://developer.apple.com/documentation/Darwin/Conceptual/KernelProgramming/index.html))
     (**non-free**)
 
-  * [[open_issues/OSF_Mach]]
+  * [[service_solahart_jakarta_selatan__082122541663/Osf_mach]]
 
 
 # Related
