update for rename of open_issues/libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/virtualization/fakeroot.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization/fakeroot.mdwn
@@ -541,7 +541,7 @@ License|/fdl]]."]]"""]]
 
 ## IRC, freenode, #hurd, 2014-01-20
 
-[[open_issues/libpthread]],
+[[service_solahart_jakarta_selatan__082122541663/libpthread]],
 [[open_issues/libpthread/t/fix_have_kernel_resources]].
 
     <braunr> teythoon: it's perfectly possible that the bug i had with
