update for rename of open_issues/libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/libpthread_glibc_nptl_testsuite.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread_glibc_nptl_testsuite.mdwn
@@ -11,7 +11,7 @@ License|/fdl]]."]]"""]]
 [[!tag open_issue_glibc open_issue_libpthread]]
 
 For fun and profit we should run [[glibc]]'s [[service_solahart_jakarta_selatan__082122541663/Nptl]] testsuite against
-[[libpthread]].
+[[service_solahart_jakarta_selatan__082122541663/libpthread]].
 
 Also, there are sometimes issues fixed in NPTL that libpthread should also be
 checked against.  Totally incomplete list:
