--- a/service_solahart_jakarta_selatan__082122541663/libpthread/t/fix_have_kernel_resources.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread/t/fix_have_kernel_resources.mdwn
@@ -895,7 +895,7 @@ See [[/open_issues/glibc]] for `*context` functions.
       down a system because servers can start trashing a lot sooner, as it was
       the case during the pthread migration
 
-See discussion about that on [[/open_issues/libpthread]].
+See discussion about that on [[/service_solahart_jakarta_selatan__082122541663/libpthread]].
 
     <braunr> so i'll hunt it down before merging
 
@@ -1182,7 +1182,7 @@ See discussion about that on [[/open_issues/libpthread]].
     <braunr> i'm pretty certain about this one so i'll commit it directly
     <braunr> the other is fixing the tcb of the main thread
 
-[[open_issues/libpthread]].
+[[service_solahart_jakarta_selatan__082122541663/libpthread]].
 
     <braunr> where i simply do tcb->self = thread->kernel_thread :)
     <braunr> with a comment explaining why i don't do something else like
