update for rename of open_issues/libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/select.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/select.mdwn
@@ -1402,7 +1402,7 @@ IRC, unknown channel, unknown date:
     <braunr> it looks better to work on pthread now
     <braunr> to avoid too many abi changes
 
-[[libpthread]].
+[[service_solahart_jakarta_selatan__082122541663/libpthread]].
 
 
 #### IRC, freenode, #hurd, 2012-08-07
@@ -1942,7 +1942,7 @@ IRC, unknown channel, unknown date:
     <braunr> and i'm just waiting for the pthreads hurd to spread before
       adapting my select branch
 
-[[libpthread]].
+[[service_solahart_jakarta_selatan__082122541663/libpthread]].
 
     <braunr> it won't fix the conformance issue, but it will fix the underlying
       implementation (the rpc)
