update for rename of open_issues/ext2fs_deadlock.mdwn to service_solahart_jakarta_selatan__082122541663/ext2fs_deadlock.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/locking_issues.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/locking_issues.mdwn
@@ -23,7 +23,7 @@ There are locking issues in the Hurd's libraries.
 
 # ext2fs Deadlock
 
-[[ext2fs_deadlock]].
+[[service_solahart_jakarta_selatan__082122541663/ext2fs_deadlock]].
 
 
 # Formal Verification
