--- a/service_solahart_jakarta_selatan__082122541663/libpthread_glibc_nptl_testsuite.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread_glibc_nptl_testsuite.mdwn
@@ -10,7 +10,7 @@ License|/fdl]]."]]"""]]
 
 [[!tag open_issue_glibc open_issue_libpthread]]
 
-For fun and profit we should run [[glibc]]'s [[service_solahart_jakarta_selatan__082122541663/Nptl]] testsuite against
+For fun and profit we should run [[service_solahart_jakarta_selatan__082122541663/glibc]]'s [[service_solahart_jakarta_selatan__082122541663/Nptl]] testsuite against
 [[service_solahart_jakarta_selatan__082122541663/libpthread]].
 
 Also, there are sometimes issues fixed in NPTL that libpthread should also be
