update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/thread-cancel_c_55_hurd_thread_cancel_assertion___spin_lock_locked_ss_critical_section_lock.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/thread-cancel_c_55_hurd_thread_cancel_assertion___spin_lock_locked_ss_critical_section_lock.mdwn
@@ -51,4 +51,4 @@ IRC, unknown channel, unknown date:
     <youpi> nope: look at the code :)
     <youpi> or maybe the cancel_hook, but I really doubt it
 
-See discussion about *`critical_section_lock`* on [[glibc]].
+See discussion about *`critical_section_lock`* on [[service_solahart_jakarta_selatan__082122541663/glibc]].
