update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/ifunc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/ifunc.mdwn
@@ -38,7 +38,7 @@ use it from GCC.
         $ tmpdir/test-1
         tmpdir/test-1: error while loading shared libraries: tmpdir/libshared_ifunc.so: ELF file OS ABI invalid
 
-  * [[glibc]]
+  * [[service_solahart_jakarta_selatan__082122541663/glibc]]
 
       * [[service_solahart_jakarta_selatan__082122541663/libc_variant_selection]]
 
