update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn

--- a/community/gsoc/project_ideas/testing_framework/discussion.mdwn
+++ b/community/gsoc/project_ideas/testing_framework/discussion.mdwn
@@ -53,7 +53,7 @@ freenode, #hurd channel, 2011-03-05:
 
     <antrik> AFAIK libc has very few failing tests
 
-[[open_issues/glibc]].
+[[service_solahart_jakarta_selatan__082122541663/glibc]].
 
     <youpi> err, like twenty?
     <youpi> € grep -v '^#' expected-results-i486-gnu-libc | wc -l
