update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
@@ -24,7 +24,7 @@ We have debugging infrastructure.  For example:
 
 # To Do
 
-  * [[glibc]]'s sotruss
+  * [[service_solahart_jakarta_selatan__082122541663/glibc]]'s sotruss
 
   * [[service_solahart_jakarta_selatan__082122541663/ltrace]]
 
