update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/dbus.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/dbus.mdwn
@@ -134,7 +134,7 @@ The dbus problems are due to missing scm credentials [[sendmsg_scm_creds]] and s
       libpthread? Setting a breakpoint with libc0.3-dbg installed.
     <braunr> gnu_srs1: i don't know
 
-See [[glibc]], *Missing interfaces, amongst many more*, *`SOCK_CLOEXEC`*.
+See [[service_solahart_jakarta_selatan__082122541663/glibc]], *Missing interfaces, amongst many more*, *`SOCK_CLOEXEC`*.
 
 
 # IRC, freenode, #hurd, 2013-09-04
