update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -2077,7 +2077,7 @@ Same issue as [[service_solahart_jakarta_selatan__082122541663/term_blocking]] p
     <pinotree> braunr: i found that out days ago, and samuel said they were
       okay
 
-[[glibc]], `flockfile`/`ftrylockfile`/`funlockfile`.
+[[service_solahart_jakarta_selatan__082122541663/glibc]], `flockfile`/`ftrylockfile`/`funlockfile`.
 
 
 ## IRC, freenode, #hurd, 2013-01-15
