update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/nightly_builds_deb_packages.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/nightly_builds_deb_packages.mdwn
@@ -280,7 +280,7 @@ of `device:hd0s1`.
     <gg0> i'd like doing it, i'm better at working around for now though :)
     <gg0> one blocker is mount/umount stuff
 
-[[glibc#mount]].
+[[service_solahart_jakarta_selatan__082122541663/glibc#mount]].
 
     <youpi> well, you'll have to get into fixing bugs for real someday
     <youpi> otherwise this is just adding to TODO lists
