update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
@@ -29,7 +29,7 @@ abandoned).
       * used by the [[GCC testsuite|service_solahart_jakarta_selatan__082122541663/gcc]], [[GDB testsuite|gdb]],
         [[binutils testsuite|service_solahart_jakarta_selatan__082122541663/binutils]], etc.
 
-  * The [[glibc testsuite|glibc]] has a home-grown system (Makefile-based),
+  * The [[glibc testsuite|service_solahart_jakarta_selatan__082122541663/glibc]] has a home-grown system (Makefile-based),
     likewise does the [[service_solahart_jakarta_selatan__082122541663/Open_posix_test_suite]].
 
   * [Kyua](http://code.google.com/p/kyua/) (and its predecessor [ATF](http://www.NetBSD.org/~jmmv/atf/)).
