update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/libc_variant_selection.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libc_variant_selection.mdwn
@@ -53,5 +53,5 @@ On Thu, Oct 07, 2010 at 11:22:46AM +0200, Samuel Thibault wrote:
 
 ---
 
-Having working CPUID code inside [[glibc]] is also a prerequisite for proper
+Having working CPUID code inside [[service_solahart_jakarta_selatan__082122541663/glibc]] is also a prerequisite for proper
 [[IFUNC]] support.
