update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/profiling.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/profiling.mdwn
@@ -22,7 +22,7 @@ done for [[performance analysis|service_solahart_jakarta_selatan__082122541663/p
     Should be working, but some issues have been reported, regarding GCC spec
     files.  Should be possible to fix (if not yet done) easily.
 
-  * [[glibc]]'s sotruss
+  * [[service_solahart_jakarta_selatan__082122541663/glibc]]'s sotruss
 
   * [[service_solahart_jakarta_selatan__082122541663/ltrace]]
 
