update for rename of open_issues/gccgo.mdwn to service_solahart_jakarta_selatan__082122541663/gccgo.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
@@ -369,7 +369,7 @@ Last reviewed up to the [[Git mirror's 3a930d3fc68785662f5f3f4af02474cb21a62056
 
   * `gcc/go`, `gcc/testsuite/go.test`, `libgo` (not reviewed)
 
-      * The [[Google Go's libgo|gccgo]] (introduced in
+      * The [[Google Go's libgo|service_solahart_jakarta_selatan__082122541663/gccgo]] (introduced in
         e440a3286bc89368b8d3a8fd6accd47191790bf2 (2010-12-03)) needs
         OS configuration / support.
 
