update for rename of open_issues/gccgo.mdwn to service_solahart_jakarta_selatan__082122541663/gccgo.mdwn

--- a/community/gsoc/project_ideas/gccgo.mdwn
+++ b/community/gsoc/project_ideas/gccgo.mdwn
@@ -30,5 +30,5 @@ Exercise: Fix one of the problems preventing *gccgo* from working on the Hurd.
 
 ---
 
-[[Open Issue page|open_issues/gccgo]].  [Entry in the GCC
+[[Open Issue page|service_solahart_jakarta_selatan__082122541663/gccgo]].  [Entry in the GCC
 wiki](http://gcc.gnu.org/wiki/SummerOfCode#gccgo_hurd).
