--- a/service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn
@@ -15,7 +15,7 @@ static code analysis ([[!wikipedia Static_code_analysis desc="Wikipedia
 article"]]) and dynamic program analysis ([[!wikipedia Dynamic_program_analysis
 desc="Wikipedia article"]]).  This topic overlaps with [[performance
 analysis|service_solahart_jakarta_selatan__082122541663/performance]], [[service_solahart_jakarta_selatan__082122541663/formal_verification]], as well as general
-[[debugging]].
+[[service_solahart_jakarta_selatan__082122541663/debugging]].
 
 [[!toc]]
 
