update for rename of open_issues/page_cache.mdwn to service_solahart_jakarta_selatan__082122541663/page_cache.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gnumach_page_cache_policy.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gnumach_page_cache_policy.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 [[!toc]]
 
 
-# [[page_cache]]
+# [[service_solahart_jakarta_selatan__082122541663/page_cache]]
 
 
 # IRC, freenode, #hurd, 2012-04-26
