--- a/service_solahart_jakarta_selatan__082122541663/latrace.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/latrace.mdwn
@@ -13,4 +13,4 @@ Check whether <http://people.redhat.com/jolsa/latrace/> works.
 
 # See Also
 
-  * [[debugging]], [[service_solahart_jakarta_selatan__082122541663/profiling]]
+  * [[service_solahart_jakarta_selatan__082122541663/debugging]], [[service_solahart_jakarta_selatan__082122541663/profiling]]
