update for rename of open_issues/performance/degradation.mdwn to service_solahart_jakarta_selatan__082122541663/performance/degradation.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/performance.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance.mdwn
@@ -30,7 +30,7 @@ call|/glibc/fork]]'s case.
 
 ---
 
-  * [[Degradation]]
+  * [[service_solahart_jakarta_selatan__082122541663/performance/Degradation]]
 
   * [[service_solahart_jakarta_selatan__082122541663/performance/fork]]
 
