update for rename of open_issues/exec.mdwn to service_solahart_jakarta_selatan__082122541663/exec.mdwn

--- a/hurd/translator/exec.mdwn
+++ b/hurd/translator/exec.mdwn
@@ -15,6 +15,6 @@ preparing the execution of processes.
 
 # Open Issues
 
-  * [[open_issues/exec]].
+  * [[service_solahart_jakarta_selatan__082122541663/exec]].
 
   * [[service_solahart_jakarta_selatan__082122541663/exec_memory_leaks]].
