--- a/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
@@ -31,7 +31,7 @@ An index of things to work on w.r.t. virtualization.
 
   * Unix / Linux 
 
-      * [[Capsicum]]
+      * [[service_solahart_jakarta_selatan__082122541663/virtualization/Capsicum]]
 
       * [[service_solahart_jakarta_selatan__082122541663/Virtual_square_view-os]]
 
