update for rename of open_issues/exec.mdwn to service_solahart_jakarta_selatan__082122541663/exec.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/fifo_thread_explosion.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/fifo_thread_explosion.mdwn
@@ -16,5 +16,5 @@ after a [[service_solahart_jakarta_selatan__082122541663/Gcc]] build (native, so
   PID  UID  PPID  PGrp  Sess TH  Vmem   RSS %CPU     User   System Args
   449 1000     3     1     1 10118 782M 198M 0.0  0:40.78  2:26.65 /hurd/fifo
 
-The other processes, in particular two instances of ext2fs and one of [[exec]],
+The other processes, in particular two instances of ext2fs and one of [[service_solahart_jakarta_selatan__082122541663/exec]],
 looked reasonable.
