update for rename of open_issues/vdso.mdwn to service_solahart_jakarta_selatan__082122541663/vdso.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/implementing_hurd_on_top_of_another_system.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/implementing_hurd_on_top_of_another_system.mdwn
@@ -359,7 +359,7 @@ Continue reading about the [[benefits_of_a_native_Hurd_implementation]].
       loaded as a virtual shared library"
     <braunr> let's call it vdso
 
-[[vDSO]]
+[[service_solahart_jakarta_selatan__082122541663/Vdso]]
 
     <peo-xaci> thanks, I looked it up on Wikipedia and understand immediately
       :P
