--- a/service_solahart_jakarta_selatan__082122541663/resource_management_problems.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/resource_management_problems.mdwn
@@ -94,7 +94,7 @@ In context of <https://teythoon.cryptobitch.de/posts/my-worst-week-yet/>.
 
   * [[hurd/critique]]
 
-  * [[IO_accounting]]
+  * [[service_solahart_jakarta_selatan__082122541663/resource_management_problems/Io_accounting]]
 
   * [[service_solahart_jakarta_selatan__082122541663/translators_set_up_by_untrusted_users]], and [[pagers]]
 
