update for rename of open_issues/mach_shadow_objects.mdwn to service_solahart_jakarta_selatan__082122541663/mach_shadow_objects.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gnumach_vm_map_entry_forward_merging.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gnumach_vm_map_entry_forward_merging.mdwn
@@ -181,7 +181,7 @@ License|/fdl]]."]]"""]]
     <braunr> from what i could see, part of the problem still exists in freebsd
     <braunr> for the same reasons (shadow objects being one of them)
 
-[[mach_shadow_objects]].
+[[service_solahart_jakarta_selatan__082122541663/mach_shadow_objects]].
 
 
 # GCC build time using bash vs. dash
