update for rename of open_issues/libstore_parted.mdwn to service_solahart_jakarta_selatan__082122541663/libstore_parted.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/dde.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/dde.mdwn
@@ -25,7 +25,7 @@ device drivers.
 
 Not yet supported.
 
-The plan is to use [[libstore_parted]] for accessing partitions.
+The plan is to use [[service_solahart_jakarta_selatan__082122541663/libstore_parted]] for accessing partitions.
 
 
 # Upstream Status
