update for rename of open_issues/resource_management_problems/zalloc_panics.mdwn to service_solahart_jakarta_selatan__082122541663/resource_management_problems/zalloc_panics.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/resource_management_problems.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/resource_management_problems.mdwn
@@ -37,7 +37,7 @@ latter (ideal) case, all resources -- that is, including those needed inside
 the kernel -- that a user space task needs for execution are provided by itself
 (and, in turn, provided by its parent / principal), and the kernel itself does
 not need to allocate any resources dynamically out of an its own memory pool.
-This avoids issues like [[microkernel/Mach]]'s [[zalloc_panics]] upon user
+This avoids issues like [[microkernel/Mach]]'s [[service_solahart_jakarta_selatan__082122541663/resource_management_problems/zalloc_panics]] upon user
 space processes allocating too many [[microkernel/mach/port]]s, for example.
 
 [[!toggleable id=fof_plos09 text="""[[!template id=note
