--- a/service_solahart_jakarta_selatan__082122541663/libc_variant_selection.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libc_variant_selection.mdwn
@@ -54,4 +54,4 @@ On Thu, Oct 07, 2010 at 11:22:46AM +0200, Samuel Thibault wrote:
 ---
 
 Having working CPUID code inside [[service_solahart_jakarta_selatan__082122541663/glibc]] is also a prerequisite for proper
-[[IFUNC]] support.
+[[service_solahart_jakarta_selatan__082122541663/Ifunc]] support.
