update for rename of open_issues/ifunc.mdwn to service_solahart_jakarta_selatan__082122541663/ifunc.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
@@ -391,7 +391,7 @@ Last reviewed up to the [[Git mirror's 3a930d3fc68785662f5f3f4af02474cb21a62056
 
   * `--enable-indirect-function`
 
-    [[IFUNC]]
+    [[service_solahart_jakarta_selatan__082122541663/Ifunc]]
 
   * <http://gcc.gnu.org/ml/gcc/2007-11/msg00289.html>,
     <http://gcc.gnu.org/ml/gcc-patches/2010-12/msg00672.html>
@@ -910,7 +910,7 @@ coulomb.SCHWINGE.
 
   * Some are correctly UNSUPPORTED:
 
-      * [[IFUNC]]
+      * [[service_solahart_jakarta_selatan__082122541663/Ifunc]]
 
         Also multiversioning, `g++.dg/ext/mv*`, for example (several of which
         started FAILing (ICE) on kepler.SCHWINGE).
