update for rename of open_issues/gdb_gcore.mdwn to service_solahart_jakarta_selatan__082122541663/gdb_gcore.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/crash_server.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/crash_server.mdwn
@@ -267,4 +267,4 @@ one...
 ---
 
 If someone is working in this area, they may want to have a look at
-[[GDB_gcore]], and port <http://code.google.com/p/google-coredumper/>, too.
+[[service_solahart_jakarta_selatan__082122541663/Gdb_gcore]], and port <http://code.google.com/p/google-coredumper/>, too.
