update for rename of open_issues/boehm_gc.mdwn to service_solahart_jakarta_selatan__082122541663/boehm_gc.mdwn

--- a/boehm_gc.mdwn
+++ b/boehm_gc.mdwn
@@ -14,4 +14,4 @@ License|/fdl]]."]]"""]]
 # <http://www.hpl.hp.com/personal/Hans_Boehm/gc/>
 
 
-# [[Maintenance|open_issues/boehm_gc]]
+# [[Maintenance|service_solahart_jakarta_selatan__082122541663/boehm_gc]]
