--- a/service_solahart_jakarta_selatan__082122541663/formal_verification.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/formal_verification.mdwn
@@ -23,7 +23,7 @@ See also [[code_analysis]].
 
 # Issues
 
-  * [[locking_issues]]
+  * [[service_solahart_jakarta_selatan__082122541663/locking_issues]]
 
   * [[service_solahart_jakarta_selatan__082122541663/term_blocking]]
 
