update for rename of open_issues/Upstart.mdwn to service_solahart_jakarta_selatan__082122541663/Upstart.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/systemd.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/systemd.mdwn
@@ -30,7 +30,7 @@ Likely there's also some other porting needed.
 # Discussion
 
 This also captures discussion about other init systems, not only systemd.  Also
-note the additional [[upstart]] page.
+note the additional [[service_solahart_jakarta_selatan__082122541663/Upstart]] page.
 
 
 ## IRC, OFTC, #debian-hurd, 2011-05-19
