--- a/service_solahart_jakarta_selatan__082122541663/security.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/security.mdwn
@@ -19,10 +19,10 @@ automated fashion.
 
 [[service_solahart_jakarta_selatan__082122541663/Unit_testing]] is one aspect: testing for reliably failing for invalid input.
 
-[[Code analysis]] is another aspect.
+[[service_solahart_jakarta_selatan__082122541663/Code_analysis]] is another aspect.
 
 All publically usable interfaces provide attacking targets.  This includes all
 [[system call]]s and [[RPC]] interfaces.
 
 Fuzzing techniques can be use for locating possible issues; see discussion on
-the [[code_analysis]] page.
+the [[service_solahart_jakarta_selatan__082122541663/code_analysis]] page.
