update for rename of open_issues/code_analysis.mdwn to service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gnumach_page_cache_policy.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gnumach_page_cache_policy.mdwn
@@ -761,7 +761,7 @@ License|/fdl]]."]]"""]]
     <youpi> for that one, I'd tend to take the time to perhaps use coccicheck
       actually
 
-[[code_analysis]].
+[[service_solahart_jakarta_selatan__082122541663/code_analysis]].
 
     <braunr> oh
     <youpi> it's one of those which is supposed to be statically ananyzable
