update for rename of open_issues/code_analysis.mdwn to service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/formal_verification.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/formal_verification.mdwn
@@ -16,7 +16,7 @@ Especially in the field of [[DSL]]s, this is used for asserting program codes'
 correctness, as explained in {{$microkernel/barrelfish#fof_plos09}}, for
 example.
 
-See also [[code_analysis]].
+See also [[service_solahart_jakarta_selatan__082122541663/code_analysis]].
 
 [[!toc]]
 
