update for rename of open_issues/wayland.mdwn to service_solahart_jakarta_selatan__082122541663/wayland.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -336,7 +336,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
 
       * <a id=epoll>`epoll`, `sys/epoll.h`</a>
 
-        Used by [[wayland]], for example.
+        Used by [[service_solahart_jakarta_selatan__082122541663/wayland]], for example.
 
         IRC, freenode, #hurd, 2013-08-08:
 
