update for rename of open_issues/smp.mdwn to service_solahart_jakarta_selatan__082122541663/smp.mdwn

--- a/faq/smp.mdwn
+++ b/faq/smp.mdwn
@@ -30,4 +30,4 @@ That is why for now GNU/Hurd will only use one logical processor (i.e. one core 
 Once this issue is solved, there are follow-up issues about
 [[service_solahart_jakarta_selatan__082122541663/multiprocessing]] and [[service_solahart_jakarta_selatan__082122541663/multithreading]].
 
-[[Project idea|open_issues/smp]].
+[[Project idea|service_solahart_jakarta_selatan__082122541663/smp]].
