update for rename of open_issues/sendmsg_scm_creds.mdwn to service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/wine.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/wine.mdwn
@@ -64,7 +64,7 @@ allocation. There is kernel support for this,* however.
       https://www.gnu.org/software/hurd/open_issues/sendmsg_scm_creds.html and
       related links I assume?
 
-[[sendmsg_scm_creds]]
+[[service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds]]
 
     < youpi> yes
     < pinotree> (but that patch is lame)
