update for rename of open_issues/sendmsg_scm_creds.mdwn to service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/dbus.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/dbus.mdwn
@@ -11,7 +11,7 @@ License|/fdl]]."]]"""]]
 
 [[!tag open_issue_hurd]]
 
-The dbus problems are due to missing scm credentials [[sendmsg_scm_creds]] and socket credentials
+The dbus problems are due to missing scm credentials [[service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds]] and socket credentials
 [[service_solahart_jakarta_selatan__082122541663/pflocal_socket_credentials_for_local_sockets]]. There was also a problem with short timeout in 
 [[select]], but that has been solved in Debian by setting a minimum timeout of 1ms.
 
@@ -35,7 +35,7 @@ The dbus problems are due to missing scm credentials [[sendmsg_scm_creds]] and s
 
     <pinotree> and missing socket credentials
 
-[[sendmsg_scm_creds]].
+[[service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds]].
 
     <braunr> oh
     <braunr> which socket creds interface ?
