--- a/service_solahart_jakarta_selatan__082122541663/pflocal_reauth.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/pflocal_reauth.mdwn
@@ -39,4 +39,4 @@ IRC, freenode, #hurd, 2011-04-02
 ---
 
 See also [[service_solahart_jakarta_selatan__082122541663/pflocal_socket_credentials_for_local_sockets]] and
-[[sendmsg_scm_creds]].
+[[service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds]].
