update for rename of open_issues/select.mdwn to service_solahart_jakarta_selatan__082122541663/select.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/bpf.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/bpf.mdwn
@@ -590,7 +590,7 @@ This is a collection of resources concerning *Berkeley Packet Filter*s.
 
 ## IRC, freenode, #hurd, 2012-08-03
 
-In context of the [[select]] issue.
+In context of the [[service_solahart_jakarta_selatan__082122541663/select]] issue.
 
     <braunr> i understand now why my bpf translator was so buggy
     <braunr> the condition_timedwait i wrote at the time was .. incomplete :)
