update for rename of open_issues/select.mdwn to service_solahart_jakarta_selatan__082122541663/select.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/dbus.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/dbus.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 
 The dbus problems are due to missing scm credentials [[service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds]] and socket credentials
 [[service_solahart_jakarta_selatan__082122541663/pflocal_socket_credentials_for_local_sockets]]. There was also a problem with short timeout in 
-[[select]], but that has been solved in Debian by setting a minimum timeout of 1ms.
+[[service_solahart_jakarta_selatan__082122541663/select]], but that has been solved in Debian by setting a minimum timeout of 1ms.
 
 [[!toc]]
 
@@ -31,7 +31,7 @@ The dbus problems are due to missing scm credentials [[service_solahart_jakarta_
     <pinotree> braunr: select() returning 0 changed fd's with very short (eg <
       1ms) timeouts when there are actually events;
 
-[[select]].
+[[service_solahart_jakarta_selatan__082122541663/select]].
 
     <pinotree> and missing socket credentials
 
