update for rename of open_issues/select.mdwn to service_solahart_jakarta_selatan__082122541663/select.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/select_vs_signals.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/select_vs_signals.mdwn
@@ -59,4 +59,4 @@ Proposed patch: [[!message-id
 
 ---
 
-See also [[select]] and [[service_solahart_jakarta_selatan__082122541663/select_bogus_fd]].
+See also [[service_solahart_jakarta_selatan__082122541663/select]] and [[service_solahart_jakarta_selatan__082122541663/select_bogus_fd]].
