update for rename of open_issues/select.mdwn to service_solahart_jakarta_selatan__082122541663/select.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/select_bogus_fd.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/select_bogus_fd.mdwn
@@ -52,4 +52,4 @@ IRC, freenode, #hurd, 2011-04-13
 
 ---
 
-See also [[select]] and [[service_solahart_jakarta_selatan__082122541663/select_vs_signals]].
+See also [[service_solahart_jakarta_selatan__082122541663/select]] and [[service_solahart_jakarta_selatan__082122541663/select_vs_signals]].
