update for rename of open_issues/select.mdwn to service_solahart_jakarta_selatan__082122541663/select.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/clock_gettime.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/clock_gettime.mdwn
@@ -78,7 +78,7 @@ What about adding a nanosecond-precision clock, too?  --[[tschwinge]]
 
 # IRC, freenode, #hurd, 2013-02-11
 
-In context of [[select]].
+In context of [[service_solahart_jakarta_selatan__082122541663/select]].
 
     <pinotree> braunr: would you send for review (and inclusion) your
       time_data_t addition?
