--- a/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
@@ -187,7 +187,7 @@ Log file from a 2011-09-07 run:
 
 # IRC, freenode, #hurd, 2012-08-09
 
-In context of the [[select]] issue.
+In context of the [[service_solahart_jakarta_selatan__082122541663/select]] issue.
 
     <braunr> i wonder where the tty allocation is made
     <braunr> it could simply be that current applications don't handle old BSD
