update for rename of open_issues/virtualization/file_systems.mdwn to service_solahart_jakarta_selatan__082122541663/virtualization/file_systems.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
@@ -41,7 +41,7 @@ An index of things to work on w.r.t. virtualization.
           * [Divorcing namespaces from
             processes](http://lwn.net/Articles/377109/), 2010-03-03
 
-  * [[File_Systems]]
+  * [[service_solahart_jakarta_selatan__082122541663/virtualization/File_systems]]
 
   * [[service_solahart_jakarta_selatan__082122541663/virtualization/Networking]]
 
