--- a/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
@@ -14,7 +14,7 @@ License|/fdl]]."]]"""]]
 
 We have debugging infrastructure.  For example:
 
-  * [[GDB]]
+  * [[service_solahart_jakarta_selatan__082122541663/Gdb]]
 
   * [[GNU Mach debugging|microkernel/mach/gnumach/debugging]]
 
