update for rename of open_issues/gdb.mdwn to service_solahart_jakarta_selatan__082122541663/gdb.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
@@ -48,7 +48,7 @@ for the process using that terminal.
 Killed that `term` instance, and things were fine again.
 
 
-All this reproducible happens while running the [[GDB testsuite|gdb]].
+All this reproducible happens while running the [[GDB testsuite|service_solahart_jakarta_selatan__082122541663/gdb]].
 
 ---
 
