update for rename of open_issues/gdb.mdwn to service_solahart_jakarta_selatan__082122541663/gdb.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
@@ -26,7 +26,7 @@ abandoned).
   * [DejaGnu](http://www.gnu.org/software/dejagnu/) /
     [Expect](http://expect.nist.gov/)
 
-      * used by the [[GCC testsuite|service_solahart_jakarta_selatan__082122541663/gcc]], [[GDB testsuite|gdb]],
+      * used by the [[GCC testsuite|service_solahart_jakarta_selatan__082122541663/gcc]], [[GDB testsuite|service_solahart_jakarta_selatan__082122541663/gdb]],
         [[binutils testsuite|service_solahart_jakarta_selatan__082122541663/binutils]], etc.
 
   * The [[glibc testsuite|service_solahart_jakarta_selatan__082122541663/glibc]] has a home-grown system (Makefile-based),
